# n8n-cli

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
n8n_cli/: __init__.py  audit.py  cli.py  client.py  community_packages.py  completions.py  config.py  credentials.py  exceptions.py  executions.py  nodes.py  output.py  projects.py  skills.py  source_control.py  tags.py  users.py  variables.py  webhooks.py  workflows.py
n8n_cli/skills_data/: __init__.py
n8n_cli/skills_data/n8n-cli-backup/: SKILL.md
n8n_cli/skills_data/n8n-cli-bulk/: SKILL.md
n8n_cli/skills_data/n8n-cli-cleanup/: SKILL.md
n8n_cli/skills_data/n8n-cli-cost/: SKILL.md
n8n_cli/skills_data/n8n-cli-create/: SKILL.md
n8n_cli/skills_data/n8n-cli-creds/: SKILL.md
n8n_cli/skills_data/n8n-cli-debug/: SKILL.md
n8n_cli/skills_data/n8n-cli-deps/: SKILL.md
n8n_cli/skills_data/n8n-cli-diff/: SKILL.md
n8n_cli/skills_data/n8n-cli-document/: SKILL.md
n8n_cli/skills_data/n8n-cli-export/: SKILL.md
n8n_cli/skills_data/n8n-cli-from-cron/: SKILL.md
n8n_cli/skills_data/n8n-cli-from-launchd/: SKILL.md
n8n_cli/skills_data/n8n-cli-from-mcp/: SKILL.md
n8n_cli/skills_data/n8n-cli-from-zapier/: SKILL.md
tests/: test_behavioral.py  test_cli.py  test_client.py  test_community.py  test_completions.py  test_config.py  test_dry_run.py  test_exceptions.py  test_new_commands.py  test_nodes.py  test_output.py  test_skills.py  test_webhooks.py  test_workflows.py
(+25 files in other folders)
